# mini-project

./: CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.sh
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: extension_rest.py  extension_ws.py  jobs.py  resumes.py
backend/app/core/: config.py  db.py
backend/app/models/: models.py
backend/app/services/: discovery.py  extension.py  parsing.py  reasoning.py
backend/app/worker/: celery_app.py  tasks.py
backend/bruno/: bruno.json
backend/bruno/Extension/: Generate Answers REST.bru
backend/bruno/Health/: Get Health.bru
backend/bruno/Jobs/: Discover Jobs.bru  Discover Status.bru  List Jobs.bru  Score Batch.bru  Score Single Job.bru  Score Status.bru
backend/bruno/Resumes/: Get Resume.bru  Upload Resume.bru
backend/docs/: api.md  backend-plan.md  devlog.md  extension_ws_explained.md  get-apify-token.md  log.md  phase2-testing.md  phase4-websocket-vs-rest.md  srs.md  steps-setup.md  steps.md  testing-phase4.md
backend/report/: CHANGES.md  gen_activity.py  gen_architecture.py  gen_dfd0.py  gen_dfd1.py  gen_dfd2.py  mini_project_rough_report.docx  report_updated.md
client/: package-lock.json
client/app/: page.tsx  types.ts
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css  sync.js
frontend/: package.json
server/: .env.example  app.py  docker-compose.yml  requirements.txt  setup.sh
(+21 files in other folders)
