[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apify-client>=2.5.0",
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.42.0",
    "docling>=2.0.0",
    "python-multipart>=0.0.20",
]
